mobile design added

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                         </div>
                     </div>
                     <div class="text-left">
-                        <img src="./img/mobilee.png" alt="screenshot of the website in mobile"/>
+                        <img id="mobile-img" src="./img/mobilee.png" alt="screenshot of the website in mobile"/>
+                        <img id="landscape-img" src="./img/landscape.png" alt="screenshot of the website in mobile"/>
                     </div>
                 </div>
             </div>
